Small css change to fix feed title is cut off

--- a/WebClient/Components/FeedItemThumbnail.scss
+++ b/WebClient/Components/FeedItemThumbnail.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     width: 300px;
-    height: 350px;
+    height: 356px;
     overflow: hidden;
     margin: 0px 12px 12px 0px;
     border: 1px solid rgb(220, 227, 236);
